--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
 
 <p>My 1 paragraph.</p>
 
-<p>My 2 paragraph.</p>
-
-<p>My 3 paragraph.</p>
-
-<p>My 4 paragraph.</p>
+<img src="images/a1.jpg" alt="a1.jpg">
 
 
 <script src="js/script.js"></script>
