Add navbar to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 
+<header>
+	<nav>
+		<a href="contact.html" class="p-3">contact</a>
+		<a href="about.html" class="p-3">about</a>
+		<a href="shop.html" class="p-3">shop</a>
+	</nav>
+</header>
+
 <h1>My First Git</h1>
 
 <p>My 1 paragraph.</p>
