--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>My First Git</h1>
+<h1>My First Git project</h1>
 
 <header>
 	<nav>
@@ -16,7 +16,9 @@
 	</nav>
 </header>
 
-<p>My 1 paragraph.</p>
+
+<p>First paragraph in home page.</p>
+
 
 <img src="images/a1.jpg" alt="a1.jpg">
 
