create new image 2a.jpg

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
 <img src="images/a1.jpg" alt="a1.jpg">
 
+<img src="images/2a.jpg" alt="2a.jpg">
+
 
 <script src="js/script.js"></script>
 </body>
