Change p tag in index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </header>
 
 
-<p>First paragraph in home page.</p>
+<p>paragraph 1 in home page.</p><p>paragraph 2 in home page.</p>
 
 
 <img src="images/a1.jpg" alt="a1.jpg">
