Update_contact.html

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 
 <h1>Contact</h1>
 
-<p>Contact paragraph.</p>
+<p>Contact paragraph 1.</p><p>Contact paragraph 2.</p>
 
 
 <script src="js/script.js"></script>
