--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 
 <h1>About</h1>
 
-<p>About paragraph.</p>
+<p>About paragraph 1.</p><p>About paragraph 2.</p>
 
 <img src="images/a1.jpg" alt="a1.jpg">
 
